# edth-munich-drone-acoustics

./: .gitignore  README.md  intro_noteboook.ipynb  pyproject.toml
src/hs_hackathon_drone_acoustics/: __init__.py  base.py  feature_extractors.py  metrics.py  plot.py
tests/: test_base.py  test_plot.py
