[project]
name = "hs-hackathon-drone-acoustics"
version = "0.0.0"
description = "The Helsing machine learning for drone acoustics hackathon problem."
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "requests>=2.32.3",
    "roseus>=2.0.0",
    "scikit-learn>=1.7.1",
    "soundfile>=0.13.1",
    "texttable>=1.7.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-xdist>=3.6.1",
    "types-requests>=2.32.0.20250328",
    "types-tqdm>=4.67.0.20250417",
]

[tool.uv]
index-strategy = "unsafe-first-match"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--capture=no --numprocesses=8 --color=yes"
